--- a/bugzee3/src/main/resources/public/tickets.html
+++ b/bugzee3/src/main/resources/public/tickets.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang='en'>
-
-
-
 <head>
     <meta charset='UTF-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Bugzee3</title>
-    <link rel="stylesheet" href="./koley.css?v=1">
+    <link rel="stylesheet" href="./koley.css">
     <script src="./app.js" async defer></script>
 </head>
-
 <body>
-
-    <h1>Bugzee3 Ticket Detail</h1>
+    <h1>Bugzee3 Tickets</h1>
     <section id="section">
-        <div id='post'></div>
+        <div id='posts'></div>
     </section>
 </body>
-
 </html>
 
