--- a/bugzee3/src/main/resources/public/ticketdetail.html
+++ b/bugzee3/src/main/resources/public/ticketdetail.html
@@ -9,7 +9,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Bugzee3</title>
     <link rel="stylesheet" href="./koley.css?v=1">
-    <script src="./app.js" async defer></script>
+    <script src="./tixdetail.js" async defer></script>
 </head>
 
 <body>
